--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,17 +56,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Asap
+      fonts:
+        - asset: assets/fonts/asap/Asap-Regular.ttf
+        - asset: assets/fonts/asap/Asap-Italic.ttf
+          style: italic
+        - asset: assets/fonts/asap/Asap-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/asap/Asap-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/asap/Asap-Medium.ttf
+          weight: 500   
+         
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
